--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>QUNATA: Project Quantum Realm</title>
+	<title>QUANTA: Project Quantum Realm</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Orbitron' rel="stylesheet">
 </head>
